# cityblocks

./: CITATION.cff  README.md  extract_area.py  pyproject.toml
.github/workflows/: pypi.yml
lcz_tiles/: tile_1_wgs84_51_52_53.gpkg  tile_5_wgs84_60.gpkg
qgis_files/: cityblocks_LCZ.qml
src/cityblocks/: _core.py  cityblocks.py  cli.py  tile_2_wgs84_54_55_56.gpkg  tile_3_wgs84_57.gpkg  tile_3_wgs84_58.gpkg  tile_5_wgs84_59.gpkg  tile_template_wgs84__raster.gpkg
