[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cityblocks"
version = "0.0.1"
dependencies = [
    "geopandas",
    "numpy",
    "rasterio",
    "shapely",
    "click",
]
authors = [
  {name = "Peter Kalverla", email = "p.kalverla@esciencecenter.nl"},
  {name = "Maurice de Kleijn", email = "m.dekleijn@esciencecenter.nl"},
]

[project.scripts]
cityblocks = "cityblocks.cli:cli"

[tool.setuptools.package-data]
cityblocks = ["*.gpkg"]

